--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Make music!</title>
   <meta name="description" content="You are part of the band">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
@@ -17,8 +17,7 @@
 </head>
 
 <body>
-  <div id="musicButton">
-  </div>
+  <div id="musicButton"></div>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
   <script src="js/main.js"></script>
