--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+  <h1 id="name"></h1>
   <div id="musicButton"></div>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
