--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -18,6 +18,10 @@
 
 <body>
   <h1 id="name"></h1>
+  <div>
+    <input type="range" id="note" name="note" min="1" max="127" step="1">
+    <label for="note">Note</label>
+  </div>
   <div id="musicButton"></div>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
