--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -11,7 +11,7 @@
   <link rel="apple-touch-icon" href="icon.png">
 
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/index.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -26,7 +26,7 @@
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
-  <script src="js/main.js"></script>
+  <script src="js/index.js"></script>
 </body>
 
 </html>
