--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -19,6 +19,7 @@
 <body>
   <div id="container">
     <h1 id="name"></h1>
+    <h2 id="instrument"></h1>
     <div>
       <input type="range" id="note" name="note" min="1" max="127" step="1">
     </div>
