--- a/src/main/resources/public/disco.html
+++ b/src/main/resources/public/disco.html
@@ -17,7 +17,23 @@
 </head>
 
 <body>
-  <div id="container">
+  <div id="grid">
+    <div class="module"></div>
+    <div class="module"></div>
+    <div class="module"></div>
+    <div class="module"></div>
+    <div class="module"></div>
+    <div class="module"></div>
+    <div class="module"></div>
+    <div class="module"></div>
+    <div class="module"></div>
+    <div class="module"></div>
+    <div class="module"></div>
+    <div class="module"></div>
+    <div class="module"></div>
+    <div class="module"></div>
+    <div class="module"></div>
+    <div class="module"></div>
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
