--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -23,7 +23,7 @@
     <div>
       <input type="range" id="note" name="note" min="30" max="90" step="1">
     </div>
-    <button id="musicButton" />
+    <button id="musicButton"></button>
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
